--- a/Manuscript/tatolatex/sdoff_lda_final.tex
+++ b/Manuscript/tatolatex/sdoff_lda_final.tex
@@ -36,7 +36,7 @@
 \maketitle
 
 \begin{abstract}
-Atmosphere-ocean teleconnections influence the accumulation and melt of snow in western Canada and can be useful in seasonal forecasting of snowmelt and runoff. Inter-annual variation in these atmosphere-ocean modes has been shown to influence the accumulation and melt of snow within British Columbia (BC), Canada. We investigate fall mean sea level pressure (MSLP) globally as a predictor of remotely sensed snowmelt dates within BC. We use the last day of continuous snow cover (\sdoff{}) detected from timeseries satellite imagery acquired by the Moderate Resolution Imaging Spectroradiometer (MODIS) for the hydrological years 2000--2018. \sdoff{} has been shown to be correlated with continuous snow duration, and is also of interest to seasonal forecasters. Global MSLP from the European Centre for Medium-Range Weather Forecasts ERA5 reanalysis was obtained over hydrological years 1979--2018. Both datasets were reduced using S-mode (time vs. location) principal components analysis. The \sdoff{} principle component scores were clustered using a \textit{k}-means clustering. Using an evolutionary feature selection approach, the subset of MSLP principle components that provided the best linear discrimination of the \sdoff{} clusters were selected. We explore the atmospheric MSLP principle components that influence the timing of snowmelt over BC, and use them to predict the \sdoff{} clusters at a seasonal lead time. 
+Atmosphere-ocean teleconnections influence the accumulation and melt of snow in western Canada and can be useful in seasonal forecasting of snowmelt and runoff. Inter-annual variation in these atmosphere-ocean modes has been shown to influence the accumulation and melt of snow within British Columbia (BC), Canada. We investigate fall mean sea level pressure (MSLP) globally as a predictor of remotely sensed snowmelt dates within BC. We use the last day of continuous snow cover (\sdoff{}) detected from timeseries satellite imagery acquired by the Moderate Resolution Imaging Spectroradiometer (MODIS) for the hydrological years 2000--2018. \sdoff{} has been shown to be correlated with continuous snow duration, and is also of interest to seasonal forecasters. Global MSLP from the European Centre for Medium-Range Weather Forecasts ERA5 reanalysis was obtained over hydrological years 1979--2018. S-mode (time vs. location) principal component analysis was carried out on both datasets. The \sdoff{} principle component scores were grouped using a \textit{k}-means clustering routine. Using evolutionary feature selection the subset of MSLP principle components that provided good linear discrimination of the \sdoff{} clusters were found. We explore the atmospheric MSLP principle components that influence the timing of snowmelt over BC, and use them to predict the \sdoff{} clusters at a seasonal lead time. 
 \end{abstract}
 
 \begin{keywords}
@@ -70,10 +70,10 @@ Our study area shown in Fig.~\ref{study-area} includes BC with small inclusions 
 \end{figure}
 
 \subsection{MODIS Snow Cover}
-MODIS is a multispectral optical imaging sensor aboard both the Aqua and Terra satellites and provides important observations of land, atmospheric and oceanic processes globally. With 36 spectral bands varying in resolution from 250-1000 m and a combined daily repeat interval MODIS is well equipped for monitoring changes over time (since late 1999) across broad geographic areas. A number of derivative products are available from MODIS Collection 6 (C6), including the daily snow cover data sets from Terra (MOD10A1, \textit{https://nsidc.org/data/mod10a1}) and Aqua (MYD10A1, \textit{https://nsidc.org/data/myd10a1}) which are based on the normalized difference snow index (NDSI) derived from MODIS Level 1B calibrated radiance \citep{Riggs2016}. In \cite{Bevington2019}, these data were used to determine the \sdon{}, \sdoff{} and \sddur{} of continuous snow cover over the study area, and to quantify their response to the ENSO and PDO regionally. The code and gridded output of this work is available online at (\textit{https://github.com/bcgov/ts-rs-modis-snow}), and the years 2000, 2001 and 2018 were additionally processed for this study. In this analysis we only use annual \sdoff{} dates, which are in units of days-since-1-September (DSS). We decided to apply \sdoff{} in this study because over BC the \sdoff{} date is thought to be a good indicator of runoff and penology \citep{Bevington2019}.
+MODIS is a multispectral optical imaging sensor aboard both the Aqua and Terra satellites and provides important observations of land, atmospheric and oceanic processes globally. With 36 spectral bands varying in resolution from 250-1000 m and a combined daily repeat interval MODIS is well equipped for monitoring changes over time (since late 1999) across broad geographic areas. A number of derivative products are available from MODIS Collection 6 (C6), including the daily snow cover data sets from Terra (MOD10A1, \textit{https://nsidc.org/data/mod10a1}) and Aqua (MYD10A1, \textit{https://nsidc.org/data/myd10a1}) which are based on the normalized difference snow index (NDSI) derived from MODIS Level 1B calibrated radiance \citep{Riggs2016}. In \cite{Bevington2019}, these data were used to determine the \sdon{}, \sdoff{} and \sddur{} of continuous snow cover over the study area, and to quantify their response to the ENSO and PDO regionally. The code and gridded output of this work is available online at (\textit{https://github.com/bcgov/ts-rs-modis-snow}), and the years 2000, 2001 and 2018 were additionally processed for this study. In this analysis we only use annual \sdoff{} dates, which are in units of days-since-1-September (DSS). We decided to apply \sdoff{} in this study because the \sdoff{} date is a known indicator of winter-spring runoff and influences spring-summer soil moisture content \citep{Cohen1994}. In addition, \sdoff{} is a driver of northern vegetation phenology which has wide ranging influences, for example, the migration patterns of ungulates \citep{John2020}.
 
 \subsection{European Centre for Medium-Range Weather Forecasts ERA5}
-The European Centre for Medium-Range Weather Forecasts (ECMWF) ERA5 atmospheric reanalysis is a global data product with a 31 km resolution and 137 atmosphere levels from the earths surface up to a height of 80 km. For the ERA5 mean sea level surface pressure (MSLP) field, data are assimilated from a combination of land, ship and buoyed based pressure observations operated by the World Meteorological Organization-Information System (WIS). The ERA5 reanalysis data is available hourly, or monthly. For this study we use the monthly MSLP product for predicting \sdoff{} (\textit{https://www.ecmwf.int/en/forecasts/datasets/reanalysis-datasets/era5}). The assimilation and physical processing for the ERA5 is carried out by the ECMWF’s Integrated Forecast System (IFS), which is described in the European Centre for Medium-Range Weather Forecasts (2016). The monthly MSLP data were obtained for the years 1979--2018.
+The European Centre for Medium-Range Weather Forecasts (ECMWF) ERA5 atmospheric reanalysis is a global data product with a 31 km resolution and 137 atmosphere levels from the earth's surface up to a height of 80 km \citep{ERA52019}. For the ERA5 mean sea level surface pressure (MSLP) field, data are assimilated from a combination of land, ship and buoy based pressure observations operated by the World Meteorological Organization-Information System (WIS). The ERA5 reanalysis data is available hourly, or monthly. For this study we use the monthly MSLP product for predicting \sdoff{} (\textit{https://www.ecmwf.int/en/forecasts/datasets/reanalysis-datasets/era5}). The assimilation and physical processing for the ERA5 is carried out by the ECMWF’s Integrated Forecast System (IFS), which is described in the European Centre for Medium-Range Weather Forecasts. The monthly MSLP data were obtained for the years 1979--2018.
 
 \section{Methods}
 \begin{figure}
@@ -84,18 +84,20 @@ The European Centre for Medium-Range Weather Forecasts (ECMWF) ERA5 atmospheric 
 \end{center}
 \end{figure}
 
-The processing workflow applied in this study is illustrated by Fig.~\ref{flow-chart}. Principle component analysis (PCA) was applied to both the gridded annual \sdoff{} data from \cite{Bevington2019} and the ERA5 monthly MSLP data averaged over the fall months (Sep--Nov). The leading principle component (PC) scores derived from the \sdoff{} time series were then used as inputs into a \textit{k}-means cluster analysis. Decomposition of the \sdoff{} time series was only necessary for computational efficiency and repeatability of the \textit{k}-means cluster analysis, the spatial loadings are presented in Appendix \ref{ApdxA}. The leading PC scores from the MSLP time series served as candidate predictors in linear discriminant analysis (LDA) where the \sdoff{} \textit{k}-means cluster results defined groups. Using the leave-one-out cross-validated (LOOCV) overall accuracy as a cost metric, feature selection for predictive LDA was carried out using an evolutionary approach. For the subset LDA, standardized coefficients were related back to the spatially reconstructed MSLP loadings to help infer atmospheric mechanisms contributing to the discrimination of the \sdoff{} clusters.   
+The processing workflow applied in this study is illustrated by Fig.~\ref{flow-chart}. Principle component analysis (PCA) was applied to both the gridded annual \sdoff{} data from \cite{Bevington2019} and the ERA5 monthly MSLP data averaged over the fall months (Sep--Nov). All of the principle component (PC) scores derived from the \sdoff{} time series were then used as inputs into a \textit{k}-means cluster analysis. Decomposition of the \sdoff{} time series was only necessary for computational efficiency and repeatability of the \textit{k}-means cluster analysis, the spatial loadings are presented in Appendix \ref{ApdxA}. The leading PC scores from the MSLP time series served as candidate predictors in linear discriminant analysis (LDA) where the \sdoff{} \textit{k}-means cluster results defined groups. Using the leave-one-out cross-validated (LOOCV) overall accuracy as a cost metric, feature selection for predictive LDA was carried out using an evolutionary approach. For the subset LDA, standardized coefficients were related back to the spatially reconstructed MSLP loadings to help infer atmospheric mechanisms contributing to the discrimination of the \sdoff{} clusters.   
 
 \subsection{K-means cluster analysis of annual \sdoff{}}\label{kmeans}
 
 \subsubsection{Principal component analysis}\label{sdoffpca}
-Decomposition of the MODIS derived annual \sdoff{} dates over BC was performed using PCA before applying a \textit{k}-means cluster analysis in order to allow efficient computation. The type of PCA applied was in the form of S-Mode (time vs. location) outlined in \cite{Richman1986}, as this type of decomposition has been extensively applied in the field of atmospheric science and similar disciplines for studying major modes of temporal variation in spatially distributed attribute fields, such as timeseries of mean sea level pressure \citep{Urska2013}. In S-Mode PCA, features represent locations (pixels), while observations correspond to repeated measures (years) (Fig.\ref{flow-chart}). For each location (pixel) the MSLP data was first zero centred by subtracting the mean MSLP from each observation, and scaled to have unit variance by dividing by the standard deviation before applying PCA. The PCA of both MSLP and \sdoff{} was computed using the R programming language 'stats' package \citep{r_stats}.
+Decomposition of the MODIS derived annual \sdoff{} dates over BC was performed using PCA before applying a \textit{k}-means cluster analysis in order to allow efficient computation. The type of PCA applied was in the form of S-Mode (time vs. location) outlined in \cite{Richman1986}, as this type of decomposition has been extensively applied in the field of atmospheric science and similar disciplines for studying major modes of temporal variation in spatially distributed attribute fields, such as timeseries of mean sea level pressure \citep{Urska2013}. In S-Mode PCA, features represent locations (pixels), while observations correspond to repeated measures (years) (Fig.\ref{flow-chart}). Before applying the PCA, for each location (pixel) fall MSLP data (September-November, see
+subsection \ref{sec:3.b}) was first zero-centred by subtracting the 1979-2018 climatological mean from each
+observation and then scaled to have unit variance by dividing by the standard deviation. A unrotated PCA solution for both MSLP and \sdoff{} was computed using the R programming language 'stats' package \citep{r_stats}.
 
 \subsubsection{K-means cluster analysis}
 The \sdoff{} PC scores were used as inputs into a non-hierarchical \textit{k}-means clustering routine. Cluster analysis is by nature an exploratory analysis technique and there are many different clustering methods available \citep{Gotelli2013}. The \textit{k}-means is one of the most frequently applied clustering methods in environmental sciences, and an efficient version detailed in \cite{Hartigan1979} was applied in this study. The \textit{k}-means clustering routine is an iterative method that begins by partitioning the data into \textit{k} groups, forming \textit{k} initial group centres. The algorithm seeks to then find a \textit{k}-partition of the data with a locally optimal within-cluster sum of squares by moving observations from one cluster to another based on their dissimilarity score, typically euclidean distance \citep{Hartigan1979}. Various methods exist for determining the number of \textit{k}-clusters to use, in this study silhouette plots were used to determine an appropriate number of clusters given the \sdoff{} data. Silhouette values represent how similar an observation is to its assigned cluster compared to the other clusters based on multivariate distance, and provide a graphical means for determining cluster appropriateness \citep{Rousseeuw1987}.
 
-\subsection{Decomposition of fall mean sea level pressure}
-The monthly data from the ERA5 MSLP reanalysis were averaged over the fall (Sep--Nov) season preceding the snow accumulation period at each location (pixel) for a given year, referred to hear as $MSLP_{FALL}$. The $MSLP_{FALL}$ was calculated for each year over the period 1979--2018. The $MSLP_{FALL}$ time series was transformed though decomposition using methods outlined in Section \ref{sdoffpca}. Common to S-Mode PCA analysis is the visual interpretation of the spatially reconstructed  eigenvectors for each of the retained PCs \citep{Urska2013}. The $MSLP_{FALL}$ eigenvectors, also referred to as loadings, were spatially reconstructed in this way to aid in the interpretation of potential underlying physical mechanisms associated with a given $MSLP_{FALL}$ PC. 
+\subsection{Decomposition of fall mean sea level pressure}\label{sec:3.b}
+The monthly data from the ERA5 MSLP reanalysis were averaged over the fall (Sep--Nov) season preceding the snow accumulation period at each location (pixel) for a given year, referred to here as $MSLP_{FALL}$. The $MSLP_{FALL}$ was calculated for each year over the period 1979--2018. The $MSLP_{FALL}$ time series was transformed though decomposition using methods outlined in Section \ref{sdoffpca}. Common to S-Mode PCA analysis is the visual interpretation of the spatially reconstructed  eigenvectors for each of the retained PCs \citep{Urska2013}. The $MSLP_{FALL}$ eigenvectors, also referred to as loadings, were spatially reconstructed in this way to aid in the interpretation of potential underlying physical mechanisms associated with a given $MSLP_{FALL}$ PC. 
 
 \subsection{Linear Discriminant Analysis}
 Linear discriminant analysis has multiple origins, both \cite{Fisher1936} and \cite{Mahalanobis1936} developed different approaches to discriminating between groups. There is however a mathematical relationship between Fisher’s linear discriminant functions (LDF) and the classification functions defined by Mahalanobis \citep[e.g.,][]{Kshirsagar1975}. Unlike cluster analysis, discriminant analysis assigns samples to groups or classes. Intuitively LDA is similar to PCA in that they both decompose the data to fewer dimensions. Where PCA is seeking to generate new axis that maximizes the variation within the data, LDA seeks to generate a new axis that maximizes the separation between established categories, and is therefore supervised. Mathematically, a linear combination of the original variables can be represented by Equation \ref{eq1},
@@ -108,7 +110,7 @@ Assuming the multivariate means $\mathbf{\bar{Y}}$ vary among groups, the goal o
 
 
 \subsection{Evolution feature selection}
-A genetic algorithm (GA) is a stochastic optimization and search algorithm inspired by biological evolution and natural selection \citep{Mitchell1998}. A typical application of binary GAs in statistical modelling is subset selection \citep{Scrucca2013}. Feature selection is a natural extension of GAs using a binary string indicating the presence or absence of a predictor from an given candidate subset. The fitness of a candidate subset is usually represented by one of several model selection criteria, such as AIC or BIC, in the case of regression \citep{Bozdogan2003}. With the retained $MSLP_{FALL}$ PCs defining the predictor set, and the \sdoff{} clusters as the response variable, the subset of PCs that maximized the leave-one-out cross-validated (LOOCV) overall accuracy from a predictive LDA was found using a GA algorithm, applying principles described in \citep{Scrucca2013}. Specifically, the fitness of a candidate subset was defined as the LOOCV accuracy, where accuracy is determined through resampling. In the case that more than one model had the same LOOCV accuracy, the ratio of the distance between group means to the total variance of each group, in addition to the number of inputs were considered in identifying the most parsimonious model. Generations were continued so that the population mean fitness appeared to become asymptotic, suggesting no more gain in model fitness would be achieved through additional generations.  
+A genetic algorithm (GA) is a stochastic optimization and search algorithm inspired by biological evolution and natural selection \citep{Mitchell1998}. A typical application of binary GAs in statistical modelling is subset selection \citep{Scrucca2013}. Feature selection is a natural extension of GAs using a binary string indicating the presence or absence of a predictor from an given candidate subset. The fitness of a candidate subset is usually represented by one of several model selection criteria, such as Akaike information criterion (AIC) or Bayesian information criterion (BIC), in the case of regression \citep{Bozdogan2003}. With the retained $MSLP_{FALL}$ PCs defining the predictor set, and the \sdoff{} clusters as the response variable, the subset of PCs that maximized the leave-one-out cross-validated (LOOCV) overall accuracy from a predictive LDA was found using a GA algorithm, applying principles described in \cite{Scrucca2013}. Specifically, the fitness of a candidate subset was defined as the LOOCV accuracy, where accuracy is determined through resampling. In the case that more than one model had the same LOOCV accuracy, the ratio of the distance between group means to the total variance of each group, in addition to the number of inputs were considered in identifying the most parsimonious model. Generations were continued so that the population mean fitness appeared to become asymptotic, suggesting no more gain in model fitness would be achieved through additional generations.  
 
 \section{Results}
 \subsection{Annual \sdoff{} date decomposition}
@@ -127,7 +129,7 @@ Principle component analysis of the annual MODIS derived \sdoff{} time series da
 			\resizebox*{0.46\textwidth}{!}{\includegraphics{Figures/SDoff/sil_k_3}\label{sil_k3}}}\hspace{5pt}
 		\subfigure[]{
 			\resizebox*{0.46\textwidth}{!}{\includegraphics{Figures/SDoff/sil_k_4}\label{sil_k4}}}\hspace{5pt}
-		\caption{Silhouette plots corresponding to \textit{k}-clusters for the \sdoff{} time series data for 2--4 clusters, red line indicates the average silhouette score.}
+		\caption{Silhouette plots corresponding to \textit{k}-clusters for the \sdoff{} time series data for 2--4 clusters (x-axis), red line indicates the average silhouette score.}
 		\label{fig:sillhouettes}
 	\end{center}
 \end{figure}
@@ -258,7 +260,7 @@ solution to assess the separation of the \sdoff{} clusters (Fig. \ref{fig:ld1_sc
 
 \begin{figure}
 	\begin{center}
-		\includegraphics[width=10cm]{Figures/LDA/LD1_ScorePlt.jpeg}
+		\includegraphics[width=10cm]{Figures/LDA/LD1_ScorePlt}
 		\caption{Distribution of LD1 scores by \sdoff{} cluster. Dashed line indicates the LD1 mean.}
 		\label{fig:ld1_scoreplot}
 	\end{center}
@@ -289,20 +291,20 @@ For both 2001 and 2014 it is worth noting neutral ENSO conditions occurred leadi
 \section{Discussion}
 
 \subsection{ERA5 Mean Sea Level Pressure and \sdoff{}}
-The standardized LDA coefficients reveal which of the $MSLP_{FALL}$ PCs are most influential on the classification of the \sdoff{} clusters (Fig. \ref{fig:loadingplot}). The $MSLP_{FALL}$ PC1 has the greatest influence on LD1 as it has the largest (in absolute value) standardized coefficient, it also explains the most variation in the $MSLP_{FALL}$ time series (Fig. \ref{fig:mslpscree}). The negative LD1 coefficient indicates that as $MSLP_{FALL}$ PC1 increases, LD1 decreases. This means that larger positive PC1 scores are associated Cluster 1, or relativity late \sdoff{} over BC, while larger negative PC1 scores are associated with Cluster 2, i.e., relativity early \sdoff{} over BC (Fig. \ref{fig:ld1_scoreplot}). The spatial loading pattern for $MSLP_{FALL}$ PC1 displays strong negative loadings centred over Oceania and Southeast Asia, while strong positive loadings occur off the western coast of equatorial South America and central Pacific Ocean (Fig. \ref{fig:mslp_1_4}). Variation in $MSLP_{FALL}$ at these centres is associated with the Walker circulation, which is closely linked with ENSO \citep{Horel1981}. A common metric of ENSO is the Southern Oscillation Index (SOI), which is the difference in MSLP between Darwin, Australia and Tahiti \citep{Trenberth1976}. Indeed, $MSLP_{FALL}$ PC1 is significantly correlated with both the SOI ($\rho = 0.92, p < 0.0001$) and ONI ($\rho = -0.89, p < 0.0001$). This would suggests that $MSLP_{FALL}$ PC1 is also correlated with sea-surface-temperatures over the tropical Pacific. Interestingly, PC1 also is significantly correlated ($\rho = 0.35, p = 0.0279$) with the Antarctic Oscillation index (AAO), and the PDO ($\rho = -0.65, p < 0.0001$).
+The standardized LDA coefficients reveal which of the $MSLP_{FALL}$ PCs are most influential on the classification of the \sdoff{} clusters (Fig. \ref{fig:loadingplot}). The $MSLP_{FALL}$ PC1 has the greatest influence on LD1 as it has the largest (in absolute value) standardized coefficient, it also explains the most variation in the $MSLP_{FALL}$ time series (Fig. \ref{fig:mslpscree}). The negative LD1 coefficient indicates that as $MSLP_{FALL}$ PC1 increases, LD1 decreases. This means that larger positive PC1 scores are associated with Cluster 1, or relativity late \sdoff{} over BC, while larger negative PC1 scores are associated with Cluster 2, i.e., relativity early \sdoff{} over BC (Fig. \ref{fig:ld1_scoreplot}). The spatial loading pattern for $MSLP_{FALL}$ PC1 displays strong negative loadings centred over Oceania and Southeast Asia, while strong positive loadings occur off the western coast of equatorial South America and the central Pacific Ocean (Fig. \ref{fig:mslp_1_4}). Variation in $MSLP_{FALL}$ at these centres is associated with the Walker circulation, which is closely linked with ENSO \citep{Horel1981}. A common metric of ENSO is the Southern Oscillation Index (SOI), which is the difference in MSLP between Darwin, Australia and Tahiti \citep{Trenberth1976}. $MSLP_{FALL}$ PC1 has strong positive loadings over Tahiti and negative loadings over Darwin and is significantly correlated with the SOI ($\rho = 0.92, p < 0.0001$) and ONI ($\rho = -0.89, p < 0.0001$). This suggest when $MSLP_{FALL}$ is negative the trade winds over the tropical Pacific weaken, leading to a counter current that results in abnormally warm surface sea temperatures in the region. This drives enhanced upper tropospheric divergence in the tropics and convergence in the subtropics, and over  western  Canada this manifests as the the familiar positive PNA pattern \citep{Horel1981}, which has a significant influence on winter climate over western Canada \citep{Shabbar2006-ek}.  Interestingly, PC1 also is significantly correlated ($\rho = 0.35, p = 0.0279$) with the Antarctic Oscillation index (AAO), and the PDO ($\rho = -0.65, p < 0.0001$), however, the physical mechanisms driving these relationships are unclear.
 \par
-Like $MSLP_{FALL}$ PC1, PC2 has a negative standardized coefficient with LD1 (Fig. \ref{fig:loadingplot}). The spatial loadings for PC2 reveal strong positive loadings throughout Antarctica, while negative loadings occur in the sub-polar regions over the Southern Ocean (Fig. \ref{fig:mslp_1_4}). $MSLP_{FALL}$ PC2 appears to be primarily contrasting the polar high to the sub-polar low in the southern hemisphere. This suggests that as MSLP increases over the Antarctic polar high, \sdoff{} over BC tends to be later. The loadings for $MSLP_{FALL}$ PC2 show a similar pattern to the southern hemisphere annular mode described in \cite{Thompson2000}, and is significantly correlated ($\rho = -0.88, p < 0.0001$) with the AAO.   
+$MSLP_{FALL}$ PC2 has a negative standardized coefficient with LD1 (Fig. \ref{fig:loadingplot}). The spatial loadings for PC2 reveal strong positive loadings throughout Antarctica, while negative loadings occur in the sub-polar regions over the Southern Ocean (Fig. \ref{fig:mslp_1_4}). The loadings for $MSLP_{FALL}$ PC2 indicate a similar pattern to the southern hemisphere annular mode described in \cite{Thompson2000}, and is significantly correlated ($\rho = -0.88, p < 0.0001$) with the AAO. The loadings also reveal strong negative centres over James Bay up to Gulf of Alaska. When $MSLP_{FALL}$ increases over this region,assuming the pattern persists, it is likely that the polar jet stream is diverted by this high pressure, resulting in drier and warmer winter conditions over much of BC \citep{Shabbar2006-ek}. This might explain why positive LD1 values, and earlier \sdoff{}, are associated with negative PC2 scores.
 \par
-Similar to $MSLP_{FALL}$ PC2, PC3 appears to be contrasting the polar high to the subpolar lows, however, in the northern hemisphere (Fig. \ref{fig:mslp_1_4}). There are wide spread negative loadings spatially corresponding with the northern polar high. Positive loading occur at the subpolar low south of Alaska, and over much of the Pacific and Oceania. This pattern is consistent with the the general loading pattern of the northern hemisphere annular mode \citep{Thompson2000}, and $MSLP_{FALL}$ PC3 is indeed correlated ($\rho = 0.63, p < 0.0001$) with the Arctic Oscillation (AO). The negative coefficient with LD1 suggests that as $MSLP_{FALL}$ increases over the polar high, \sdoff{} tends to be earlier throughout BC. The $MSLP_{FALL}$ PC3 is also significantly correlated ($\rho = 0.31, p = 0.0494$) with the North Atlantic Oscillation (NAO).  
+Similar to $MSLP_{FALL}$ PC2, PC3 appears to be contrasting the polar high to the subpolar lows, however, in the northern hemisphere (Fig. \ref{fig:mslp_1_4}). There are wide spread negative loadings spatially corresponding with the northern polar high. Positive loading occur at the subpolar low south of Alaska, and over much of the Pacific and Oceania. This pattern is consistent with the the general loading pattern of the northern hemisphere annular mode \citep{Thompson2000}, and $MSLP_{FALL}$ PC3 is indeed correlated ($\rho = 0.63, p < 0.0001$) with the Arctic Oscillation (AO). While $MSLP_{FALL}$ PC3 does have negative loadings over much of Canada, it also as strong positive loadings centred over the Aleutian Low. Assuming that fall $MSLP_{FALL}$ is indicative of winter patterns, this suggest, when PC3 is positive, the Aleutian Low weakens and likely permits the flow of moist air off the Pacific to be directed away from the Gulf of Alaska and into BC, with increased winter precipitation leading to later \sdoff{} (negative LD1 score).   
 \par
-The $MSLP_{FALL}$ PC8 is the only PC with a positive LD1 coefficient (Fig. \ref{fig:loadingplot}). There are strong negative loadings over much of western Canada, Alaska and north Pacific, while positive loadings are observed over the Aleutian Low (Fig. \ref{fig:mslp_5_6}). This indicates that PC8 may capture the $MSLP_{FALL}$ pressure gradient between the Canadian high and Aleutian Low, and likely is related to the position and orientation of the polar jet stream. The positive standardized LD1 coefficient indicates that as $MSLP_{FALL}$ increases over western Canada, Alaska and north Pacific, mean \sdoff{} over BC tends to be later. $MSLP_{FALL}$ PC8 has no significant correlation with any established atmosphere-ocean indices (i.e., ONI, SOI, AAO, AO, NAO, PNA or PDO). 
+The $MSLP_{FALL}$ PC8 is the only PC with a positive LD1 coefficient (Fig. \ref{fig:loadingplot}). Similar to $MSLP_{FALL}$ PC3  positive loadings are observed centred over the Aleutian Low, with negative loadings over much of western Canada (Fig. \ref{fig:mslp_5_6}). However, the negative loadings of $MSLP_{FALL}$ PC8 are more pronounced over western Canada and Alaska. This indicates that PC8 may capture the $MSLP_{FALL}$ pressure over the Canadian High. The positive standardized LD1 coefficient indicates that as $MSLP_{FALL}$ increases over western Canada, Alaska and north Pacific, mean \sdoff{} over BC tends to be later. The enhanced high pressure in this region is associated with the persistence of cold arctic air, and could explain the later \sdoff{} dates. $MSLP_{FALL}$ PC8 has no significant correlation with any established atmosphere-ocean indices (i.e., ONI, SOI, AAO, AO, NAO, PNA or PDO). 
 \par
-For $MSLP_{FALL}$ PC10 positive loadings are seen over much of western BC (Fig. \ref{fig:mslp_5_6}). This suggests that as $MSLP_{FALL}$ over western BC increases \sdoff{} tends to be later. $MSLP_{FALL}$ PC10 appears to capture very local  $MSLP_{FALL}$ PC10 variation along the Coast and Mountains of BC, where differences in \sdoff{} between Cluster 1 and Cluster 2 years are large. However, $MSLP_{FALL}$ PC10 has the least influence on LD1 (Fig. \ref{fig:loadingplot}). 
+For $MSLP_{FALL}$ PC10 positive loadings are seen over much of western BC (Fig. \ref{fig:mslp_5_6}). The negative LD1 coefficient implies that as $MSLP_{FALL}$ PC10 increases \sdoff{} tends to be later. $MSLP_{FALL}$ PC10 appears to capture variation along the Coast and Mountains of BC, where differences in \sdoff{} between Cluster 1 and Cluster 2 years are large. This is likely do to the fact that when $MSLP_{FALL}$ PC10 is negative, a pronounced low pressure system is located over western BC, which would result in enhanced winter precipitation in the region assuming the pattern persists into the winter months. $MSLP_{FALL}$ PC10 appears to have the least influence on LD1 (Fig. \ref{fig:loadingplot}). 
 \par
-$MSLP_{FALL}$ PC11 has the most influence on LD1 outside of PC1 (Fig. \ref{fig:loadingplot}). The loadings for PC11 show strong positive coefficients centred over the north Pacific Aleutian Low, and strong negative coefficients located over the southeast United States and north of Alaska (Fig. \ref{fig:mslp_5_6}). It may be that as $MSLP_{FALL}$ increases near the Aleutian Low, and decreases north of Alaska, moisture is directed towards BC and cold arctic air is more likely to penetrate further south, leading to longer snow persistence over BC. These conditions are consistent with the observed positive LD1 coefficient (Fig. \ref{fig:loadingplot}). $MSLP_{FALL}$ PC11 also appears to be correlated ($\rho = -0.39, p = 0.0133$) with the Pacific North American (PNA) pattern, which has been shown to have an important influence on snow accumulation and melt over BC \citep{Moore1996-xr}.
+$MSLP_{FALL}$ PC11 has the most influence on LD1 outside of PC1, but only slightly more influence than the other PCs (Fig. \ref{fig:loadingplot}). The loadings for PC11 show strong positive coefficients with two main centres over the north Pacific Aleutian Islands and off the coast of California (Fig. \ref{fig:mslp_5_6}). There are strong negative coefficients located over the southeast United States and north of Alaska, and moderate negative loading over much of western North America. The negative LD1 coefficient implies that when $MSLP_{FALL}$ is high over western North America \sdoff{} is earlier than average, and when it is high over the North Pacific \sdoff{} is later than average. With higher pressure present over western North America advection of dry continental air towards BC may be enhanced, causing warmer drier conditions over BC, and earlier \sdoff{} dates. $MSLP_{FALL}$ PC11 also appears to be negatively correlated ($\rho = -0.39, p = 0.0133$) with the Pacific North American (PNA) pattern, which has been shown to have an important influence on snow accumulation and melt over BC \citep{Moore1996-xr}.
 
 \subsection{Uncertainties}
-While this study has demonstrated that principle components of $MSLP_{FALL}$ can discriminate between clustered patterns of \sdoff{} over BC, there are some uncertainties. These include how robust these signals are over time. While indices such as ONI evolve at a rate which allows for an annual mean signature, some of the more regionally specific $MSLP_{FALL}$ PCs may change more rapidly. This may suggest changing the aggregation period from the fall period could have a significant impact on the results. However, this is not determined in this study. In addition, though LOOCV was used to establish the out-of-sample accuracy of the predictive LDA, a longer time series would allow for a more robust validation of the overall classification accuracy of the \sdoff{} clusters. 
+While this study has demonstrated that principle components of $MSLP_{FALL}$ can discriminate between clustered patterns of \sdoff{} over BC, the following uncertainties remain. These include how robust these signals are over time. While indices such as ONI evolve at a rate which allows for an annual mean signature, some of the more regionally specific $MSLP_{FALL}$ PCs may change more rapidly. This may suggest changing the aggregation period from the fall period could have a significant impact on the results. Many of the proposed  mechanisms in the study assume the $MSLP_{FALL}$ patterns persist into winter and spring to some degree, however, this persistence may not always occur. In addition, it is common to use field weighting of geophysical data to achieve grid-area parity \citep{Chung1999}. No weighting of $MSLP_{FALL}$ was applied in this study and as a result variability at the poles is likely exaggerated. Finally, while LOOCV was used to establish the out-of-sample accuracy of the predictive LDA, a longer time series would allow for a more robust validation of the overall classification accuracy of the \sdoff{} clusters.
 
 \subsection{Implications}
 The cluster analysis of \sdoff{} essentially split the \sdoff{} time series into 'early' and 'late' years relative to the time series mean (Fig. \ref{fig:clust_means}). At locations where the difference between these \sdoff{} clusters is large, there is likely to be significant variation in phenology and hydrology that correspond to the timing of \sdoff{}. The results in this study show that specific PCs of $MSLP_{FALL}$ can be used to discriminate between clusters of remotely sensed \sdoff{} over the previous 19 years when input into a LDA classifier. The spatial loadings for the subset of $MSLP_{FALL}$ PCs help provide insight into some plausible atmospheric mechanisms that explain the ability of each $MSLP_{FALL}$ PC to discriminate between the \sdoff{} clusters over BC. As future satellite data becomes available we will be able to more adequately validate the relationships demonstrated in this study. 
@@ -317,7 +319,7 @@ The overall framework of our findings is not likely to change as the dense times
 
 \subsection{Acknowledgements}
 
-The authors are very grateful to Michael Allchin, Stephen Déry, Yuexian Wang, John Rex, and William MacKenzie for conversations that helped inform the early direction of this work. Also, we acknowledge the open data science community, specifically free access to River Forecast Centre, ERA5, MODIS, Google Earth Engine, R, Python, and QGIS. 
+The authors are very grateful to Michael Allchin, Stephen Déry, Yuexian Wang, John Rex, and William MacKenzie for conversations that helped inform the early direction of this work. The authors thank the reviewers with Atmosphere-Ocean for their valuable guidance provided in response to this work. Also, we acknowledge the open data science community, specifically free access to River Forecast Centre, ERA5, MODIS, Google Earth Engine, R, Python, and QGIS. 
 
 \subsection{Funding}
 
@@ -404,6 +406,8 @@ We will provide the coding in a BC Government GitHub repository once peer-review
 			\resizebox*{0.38\textwidth}{!}{\includegraphics{Figures/SDoff/sdoff_pc17}\label{sdoff_load_17}}}\hspace{5pt}
 		\subfigure[\sdoff{} PC18 Loadings]{
 			\resizebox*{0.38\textwidth}{!}{\includegraphics{Figures/SDoff/sdoff_pc18}\label{sdoff_load_18}}}\hspace{5pt}
+		\subfigure[\sdoff{} PC19 Loadings]{
+			\resizebox*{0.38\textwidth}{!}{\includegraphics{Figures/SDoff/sdoff_pc19}\label{sdoff_load_19}}}\hspace{5pt}
 		\caption{The spatially reconstructed loadings of the leading four eigenvectors from principle component analysis of the \sdoff{} timeseries, years 2000--2018.}
 		\label{sdoff_load_17_18}
 	\end{center}
